--- a/styles.css
+++ b/styles.css
@@ -11,29 +11,39 @@
     text-align: center;
 }
 
-#search-bar {
+#search-bar, .button {
     font-family: 'Roboto Slab', serif;
+    font-size: 1.2rem;
+    height: 40px;
+}
+
+#search-bar {
     padding-left: 10px;
     width: 40%;
     border-radius: 2px;
     border: 1px solid #cccccc;
-    height: 25px;
+
     box-shadow: inset 0px 0px 5px 2px #eeeeee;
+    -webkit-box-shadow: inset 0px 0px 5px 2px #eeeeee;
+    -moz-box-shadow: inset 0px 0px 5px 2px #eeeeee;
 }
 
 .button {
-    font-family: 'Roboto Slab', serif;
     border-radius: 2px;
     background-color: #eeeeee;
     border: 1px solid #cccccc;
     padding: 2px;
     padding-left: 4px;
     padding-right: 4px;
+
     box-shadow: inset 0px 0px 10px 2px #eeeeee;
+    -webkit-box-shadow: inset 0px 0px 10px 2px #eeeeee;
+    -moz-box-shadow: inset 0px 0px 5px 2px #eeeeee;
 }
 
 #loading, #error {
     font-family: 'Roboto', sans-serif;
+    color: #999999;
     font-size: 1.3rem;
     text-align: center;
     display: none;
@@ -41,8 +51,8 @@
 
     -webkit-animation: fadein 0.5s;
     -moz-animation: fadein 0.5s;
-    -ms-animation: fadein 0.5s;
     -o-animation: fadein 0.5s;
+
     animation: fadein 0.5s;
 }
 
@@ -51,8 +61,8 @@
 
     -webkit-animation: fadein 1s;
     -moz-animation: fadein 1s;
-    -ms-animation: fadein 1s;
     -o-animation: fadein 1s;
+
     animation: fadein 1s;
 }
 
@@ -65,11 +75,14 @@
     padding: 10px;
     border: 1px solid #dddddd;
     border-radius: 5px;
+
     box-shadow: 0px 0px 20px 2px #eeeeee;
+    -webkit-box-shadow: 0px 0px 5px 2px #eeeeee;
+    -moz-box-shadow: 0px 0px 5px 2px #eeeeee;
+
 
     -webkit-animation: fadein 1.25s;
     -moz-animation: fadein 1.25s;
-    -ms-animation: fadein 1.25s;
     -o-animation: fadein 1.25s;
     animation: fadein 1.25s;
 }
@@ -79,6 +92,10 @@
     text-align: center;
 }
 
+.result-image-container {
+    min-height: 100px;
+}
+
 .cover-img {
     display: inline;
     margin: auto;
@@ -86,7 +103,10 @@
     margin-bottom: 10px;
     padding: 2px;
     border: 1px solid #aaaaaa;
+
     box-shadow: 0px 0px 20px 2px #dddddd;
+    -webkit-box-shadow: 0px 0px 5px 2px #eeeeee;
+    -moz-box-shadow: 0px 0px 5px 2px #eeeeee;
 }
 
 .title {
@@ -113,6 +133,11 @@
     margin-bottom: 10px;
 }
 
+@keyframes fadein {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+
 @-webkit-keyframes fadein {
     from { opacity: 0; }
     to { opacity: 1; }
@@ -123,17 +148,7 @@
     to { opacity: 1; }
 }
 
-@-ms-keyframes fadein {
-    from { opacity: 0; }
-    to { opacity: 1; }
-}
-
 @-o-keyframes fadein {
-    from { opacity: 0; }
-    to { opacity: 1; }
-}
-
-@keyframes fadein {
     from { opacity: 0; }
     to { opacity: 1; }
 }
@@ -163,5 +178,12 @@
     #container {
         margin: auto;
         max-width: 1660px;
+    }
+}
+
+@media screen and (min-width: 2090px) {
+    #container {
+        margin: auto;
+        max-width: 2090px;
     }
 }
