--- a/styles.css
+++ b/styles.css
@@ -7,19 +7,26 @@
 }
 
 #search-area {
-    padding: 1%;
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
     text-align: center;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 #search-bar, .button {
     font-family: 'Roboto Slab', serif;
     font-size: 1.2rem;
     height: 40px;
+    margin-top: 5px;
+    box-sizing: border-box;
 }
 
 #search-bar {
+    display: block;
+    width: 100%;
     padding-left: 10px;
-    width: 40%;
     border-radius: 2px;
     border: 1px solid #cccccc;
 
@@ -29,16 +36,25 @@
 }
 
 .button {
+    display: block;
+    width: 100%;
+    height: 35px;
+    color: #666666;
     border-radius: 2px;
     background-color: #eeeeee;
     border: 1px solid #cccccc;
     padding: 2px;
     padding-left: 4px;
     padding-right: 4px;
+    overflow: hidden;
 
     box-shadow: inset 0px 0px 10px 2px #eeeeee;
     -webkit-box-shadow: inset 0px 0px 10px 2px #eeeeee;
     -moz-box-shadow: inset 0px 0px 5px 2px #eeeeee;
+}
+
+.button:active {
+    background-color: #cccccc;
 }
 
 #loading, #error {
@@ -47,7 +63,7 @@
     font-size: 1.3rem;
     text-align: center;
     display: none;
-    margin-bottom: 1%;
+    margin-bottom: 10px;
 
     -webkit-animation: fadein 0.5s;
     -moz-animation: fadein 0.5s;
@@ -153,10 +169,30 @@
     to { opacity: 1; }
 }
 
+@media screen and (min-width: 410px) {
+    #search-area {
+        width: 400px;
+    }
+
+    #search-bar {
+        display: inline-block;
+        width: 60%;
+    }
+
+    #search-btn {
+        display: inline-block;
+        width: 100px;
+        height: 40px;
+    }
+
 @media screen and (min-width: 840px) {
     #container {
         margin: auto;
         max-width: 840px;
+    }
+
+    #search-area {
+        width: 90%;
     }
 
     .result {
